# immigration_ai

./: .gitignore  README.md  README_CHINESE_LANGUAGE_PATCH.md  README_FRONTEND_CHINESE_STATIC_UI_PATCH.md  apply_chinese_language_patch.py  apply_frontend_chinese_static_ui_patch.py  frontend_chinese_static_ui_patch_manifest.json  patch_manifest.json
legal-service/: .env  README.md  pyproject.toml
legal-service/app/: main.py
legal-service/app/api/: deps.py  router.py
legal-service/app/api/routes/: escalate.py  health.py  intake.py  matters.py  query.py  sources.py
legal-service/app/core/: config.py
legal-service/app/db/: base.py  models.py  session.py
legal-service/app/schemas/: common.py  escalation.py  intake.py  query.py  source.py  state.py
legal-service/app/services/: case_state_service.py  embedding_service.py  escalation_service.py  fact_extraction_service.py  ingestion_service.py  intake_service.py  language_service.py  lightweight_response_service.py  live_retrieval_service.py  live_trigger_policy.py  operation_profiles.py  policy_rules.py  pre_llm_router_service.py  query_service.py  reasoning_service.py  reasoning_service.py.bak_chinese_language  retrieval_service.py  source_service.py  state_machine.py
legal-service/data/raw/guidance/: 1005.json  1006.json  1008.json  Genuine Student requirement.json  (+18 more)
legal-service/scripts/: bootstrap_db.py  build_corpus_json.py  embed_chunks.py  ingest_sources.py  reset_db.py  seed_sample_data.py  smoke_test_chinese_language.py.bak_chinese_language  smoke_test_embeddings.py  smoke_test_pre_llm_router.py
(+235 files in other folders)
