[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immigration-legal-service"
version = "0.1.0"
description = "FastAPI legal backend for an immigration AI assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI" }]
dependencies = [
  "fastapi>=0.118.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.48",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.4.1",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "email-validator>=2.2.0",
  "openai>=1.75.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
